--- a/_config.yml
+++ b/_config.yml
@@ -107,8 +107,8 @@ daovoice_userid: NO_89757
 ga_track_id: 'UA-105172812-1'            # Format: UA-xxxxxx-xx
 ga_domain: auto                         #  自定义的域名,默认的是 auto,
 ## 站点验证 html标记
-#baidu-site-verification: "0H5CdgBtg0"       #origin,与域名有关,在_include/head.html中,下同  
-baidu-site-verification: aNsquf4NVy
+baidu-site-verification: "0H5CdgBtg0"       #origin,与域名有关,在_include/head.html中,下同  
+#baidu-site-verification: aNsquf4NVy
 google-site-verification: KIjjnGZK8x7PddQoXqhBJrOpbYg7k04AHE_gt_1PYtc 
 
 # Friends
