--- a/_config.yml
+++ b/_config.yml
@@ -57,8 +57,8 @@ BGM: true
 ## 网易云音乐   8月24日：弃用,效果不好，改用Aplayer
 #netease-music: false
 #netease-music_url: "//music.163.com/outchain/player?type=0&id=804530027&auto=1&height=430"
-## Aplayer，Doc: https://aplayer.js.org/docs/#/?id=options
-Aplayer: 
+## APlayer，Doc: https://aplayer.js.org/docs/#/?id=options
+APlayer: 
     data-id: 804530027      #歌曲/专辑/歌单ID
     data-server: netease    #可选参数 netease(网易云音乐)tencent(qq音乐)xiami(虾米音乐)kugou(酷狗音乐)baidu(百度音乐)
     data-type: playlist     #类型:song/album/playlist/search
