--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 ###### Site settings
-# Site settings
 title: Quanyin Blog
 SEOTitle: Quanyin Tang的博客 | Quanyin Blog
 header-img: /Source/images/background/bg-default.jpg    #默认底图,相对地址,如果没有额外指定的话
@@ -41,7 +40,7 @@ kramdown:
 #### 插件设置与开关 
 ### Sidebar settings 侧边栏
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "自由而无用，<br>离开世界之前，一切都是过程"
+sidebar-about-description: "自由而无用的灵魂，<br>离开世界之前，一切都是过程"
 sidebar-avatar: /Source/images/avatar.jpg  # use absolute URL, seeing it's used in both `/` and `/about/`
 catalog: true                           # 文章侧边栏目录
 keynote-catalog: false
@@ -62,8 +61,8 @@ APlayer:
     data-id: 804530027      #歌曲/专辑/歌单ID
     data-server: netease    #可选参数 netease(网易云音乐)tencent(qq音乐)xiami(虾米音乐)kugou(酷狗音乐)baidu(百度音乐)
     data-type: playlist     #类型:song/album/playlist/search
-    data-mode: random  #播放模式:random/single/circulation/order
-    data-autoplay: true     #自动播放？
+    data-mode: random       #播放模式:random/single/circulation/order
+    data-autoplay: true     #自动播放true or false
 ##不蒜子计数
 busuanzi: true
 busuanzi_fixcount: true #初始数值修正
@@ -131,5 +130,9 @@ friends: [
     {   
          title: "BruceZhaoR",
          href: "http://brucezhaor.github.io"
-    }
+    },
+    {   
+         title: "CCMG",
+         href: "https://fudanccmg.github.io"
+    },
 ]
