--- a/_config.yml
+++ b/_config.yml
@@ -69,9 +69,9 @@ click-love: true
 ##背景动画-特效
 canvas-nest: false
 ###推送到百度、360等以增加收录
-push-for-include: true
+push-for-include: false
 ##百度 需要验证
-push-to-baidu: true
+push-to-baidu: false
 ##360
 push-to-360: false
 
