--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ###### Site settings
 title: Quanyin Blog
 SEOTitle: Quanyin Tang的博客 | Quanyin Blog
-header-img: /Source/images/background/bg-default.jpg    #默认底图,相对地址,如果没有额外指定的话
+header-img: /Source/images/background/bg-default.jpg    #默认底图,相对地址,如果没有额外指定的话,1900*870,渐进式jpg
 email: qytang326@gmail.com
 description: "博学而笃志，切问而近思 | 这里是 @Quanyin 的个人博客，与你一起发现更大的世界。"
 keyword: "Quanyin, Quanyin Blog, Quanyin 博客, Quanyin Tang, Quanyin Tang的博客"
