--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,13 @@ permalink: /:year/:month/:day/:title/      #自定义永久链接,或者使用#p
 paginate: 10                                    #每页展示项目数
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html` 取消#显示
+compress_html:                          # 压缩html
+  clippings:      all
+  comments:       all
+  endings:        all
+  blanklines: false
+  profile: false
+  startings:      [html, head, body]
 ### Gems
 plugins: 
   - github-pages
