--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ paginate: 10                                    #每页展示项目数
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html` 取消#显示
 compress_html:                          # 压缩html
+  switch: true
   clippings:      all
   comments:       all
   endings:        all
