--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,9 @@ homepage: "https://quanyin.eu.org"
 repo: qytang326.github.io                      #Where is the Repo
 
 ##### Build settings
+publish: true   
 encoding: utf-8
+timezone: Asia/Shanghai
 highlighter: rouge
 permalink: /:year/:month/:day/:title/      #自定义永久链接,或者使用#permalink: pretty
 paginate: 10                                    #每页展示项目数
@@ -87,7 +89,7 @@ busuanzi_fixcount: true #初始数值修正
 ##pageviews
 hit-kounter: false
 ##页面点击小红心
-click-love: true
+click-love: false
 ##背景动画-特效
 canvas-nest: false
 ###推送到百度、360等以增加收录
