--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ plugins:
   - jekyll-paginate
   - jekyll-github-metadata
   - jekyll-mentions
-  - jekyll-sitemap
+#  - jekyll-sitemap
   - jekyll-gist  
   - jekyll-feed
   - jekyll-press
