--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "grunt-contrib-concat": "^1.0.1",
         "grunt-contrib-connect": "^1.0.2",
         "grunt-contrib-cssmin": "^2.2.1",
+        "grunt-contrib-imagemin": "^2.0.1",
         "grunt-contrib-jshint": "^1.1.0",
         "grunt-contrib-less": "^0.11.4",
         "grunt-contrib-sass": "^1.0.0",
