--- a/_config.yml
+++ b/_config.yml
@@ -24,31 +24,62 @@ anchorjs: true                          # if you want to customize anchor. check
 compress_html:                          # 压缩html
     switch: true
     clippings:      [all]
-    comments:       [all]
-#    endings:        [all]
+    comments:       ["<!--","-->"]
+    endings:        [all]
     ignore:
         envs: []
     blanklines: false
     profile: false
-#    startings:      [html,head,body]
-
+    startings:      [all]
+compress_html2:                          # 压缩html
+    switch: true
+    clippings: []
+    comments:       ["/*","*/"]
+    endings:        []
+    ignore:
+        envs: []
+    blanklines: false
+    profile: false
+    startings:      []
 jekyll-press:
   exclude: 'feed.xml' # Exclude files from processing - file name, glob pattern or array of file names and glob patterns
   js_options: {}      # js minifier options
   css_options: {}     # css minifier options
   html_options: {}    # html minifier options
-    
+jekyll-minifier:
+  preserve_php: true                # Default: false
+  remove_spaces_inside_tags: true   # Default: true
+  remove_multi_spaces: true         # Default: true
+  remove_comments: true             # Default: true
+  remove_intertag_spaces: true      # Default: false
+  remove_quotes: true              # Default: false
+  compress_css: true                # Default: true
+  compress_javascript: true         # Default: true
+  simple_doctype: true             # Default: false
+  remove_script_attributes: true   # Default: false
+  remove_style_attributes: true    # Default: false
+  remove_link_attributes: true     # Default: false
+  remove_form_attributes: true     # Default: false
+  remove_input_attributes: true    # Default: false
+  remove_javascript_protocol: true # Default: false
+  remove_http_protocol: true       # Default: false
+  remove_https_protocol: true      # Default: false
+  preserve_line_breaks: true       # Default: false
+  simple_boolean_attributes: true  # Default: false
+  compress_js_templates: true      # Default: false  
 ### Gems
 plugins: 
   - github-pages
   - jekyll-paginate
   - jekyll-github-metadata
   - jekyll-mentions
-#  - jekyll-sitemap
   - jekyll-gist  
   - jekyll-feed
   - jekyll-press
+  - jekyll-minifier
+  - jekyll-seo-tag
 #  - jemoji
+#  - jekyll-sitemap
 
 ### Markdown settings
 # document: http://jekyllrb.com/docs/configuration/#kramdown
