--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "grunt": "^0.4.5",
         "grunt-banner": "^0.2.3",
+        "grunt-contrib": "^0.11.0",
         "grunt-contrib-concat": "^1.0.1",
         "grunt-contrib-connect": "^1.0.2",
         "grunt-contrib-cssmin": "^2.2.1",
