--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "Source/impress-js"]
 	path = Source/impress-js
-	url = git@github.com:impress/impress.js.git
+	url = https://github.com/impress/impress.js.git
 	branch = gh-pages
