--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "grunt-contrib-less": "^0.11.4",
         "grunt-contrib-sass": "^1.0.0",
         "grunt-contrib-uglify": "^0.5.1",
-        "grunt-contrib-watch": "^0.6.1"
+        "grunt-contrib-watch": "^0.6.1",
+        "grunt-htmllint": "^0.2.7"
     },
     "scripts": {
         "preview": "cd _site; python -m SimpleHTTPServer 8020",
