--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "grunt-contrib-sass": "^1.0.0",
         "grunt-contrib-uglify": "^0.5.1",
         "grunt-contrib-watch": "^0.6.1",
-        "grunt-htmllint": "^0.2.7"
+        "grunt-htmllint": "^0.2.7",
+        "jsmin": "^1.0.1"
     },
     "scripts": {
         "preview": "cd _site; python -m SimpleHTTPServer 8020",
@@ -33,7 +34,5 @@
         "push": "git push origin master --tag",
         "cafe": "git co gitcafe-pages; git merge master; git push gitcafe gitcafe-pages:gitcafe-pages --tag; git co master;"
     },
-    "dependencies": {
-        "jsmin": "^1.0.1"
-    }
+    "dependencies": {}
 }
