--- a/_config.yml
+++ b/_config.yml
@@ -27,11 +27,11 @@ anchorjs: true                          # if you want to customize anchor. check
 plugins: 
   - github-pages
   - jekyll-paginate
-  - jekyll-github-metadata
-  - jekyll-gist  
+#  - jekyll-github-metadata
+#  - jekyll-gist  
   - jekyll-feed
-  - jekyll-press
-  - jekyll-minifier
+#  - jekyll-press
+#  - jekyll-minifier
   - jekyll-seo-tag
   - jemoji
   - jekyll-sitemap
@@ -197,7 +197,7 @@ friends: [
     },
     {   
          title: "BruceZhaoR",
-         href: "http://brucezhaor.github.io"
+         href: "https://brucezhaor.github.io"
     },
     {   
          title: "CCMG",
@@ -225,6 +225,6 @@ friends: [
     },
     {   
          title: "月光博客",
-         href: "http://williamlong.info/"
+         href: "https://williamlong.info/"
     },
 ]
