--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ timezone: Asia/Shanghai
 highlighter: rouge
 permalink: /:year/:month/:day/:title/      #自定义永久链接,或者使用#permalink: pretty
 paginate: 10                                    #每页展示项目数
-exclude: ["less","node_modules","Gruntfile.js","package.json","*lock*","Gemfile","README.md","CHANGELOG.md","CONTRIBUTING.md","DOCUMENTATION.md","/Source/*README*","/Source/*CHANGELOG*","/Source/*CONTRIBUTING*","/Source/*DOCUMENTATION*","/Source/*example*","*baiduyun.uploading.cfg"]
+exclude: ["less","node_modules","Gruntfile.js","package.json","*lock*","Gemfile","README.md","CHANGELOG.md","CONTRIBUTING.md","DOCUMENTATION.md","/Source/*README*","/Source/*CHANGE*","/Source/*CONTRIBUTING*","/Source/*DOCUMENTATION*","/Source/*example*","*baiduyun.uploading.cfg"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html` 取消#显示
 
 ### Gems
